# rusclimbing-search

./: .ai-factory.json  .coverage  .env.example  .gitignore  .pylintrc  README.md  ai-request.md  linting.md  package.json  pyproject.toml
.kilocode/: mcp.json
.kilocode/rules-code/: rules.md
.kilocode/skills/aif/: SKILL.md
.kilocode/skills/aif-commit/: SKILL.md
.kilocode/skills/aif-evolve/: SKILL.md
.kilocode/skills/aif-security-checklist/: SKILL.md
.kilocode/skills/aif-skill-generator/: SKILL.md
.kilocode/skills/aif-skill-generator/references/: EXAMPLES.md  SECURITY-SCANNING.md
.kilocode/skills/aif-skill-generator/templates/: visual.md
api/: db.py  main.py  models.py  parser.py  test_parser.py
api/v1/routes/: events.py
app/: main.py
app/api/: db.py  deps.py  main.py  models.py  parser.py  parser_test.py  run_tests.py  test_parser.py  utils.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  events.py  teams.py
app/api/v1/routes/: events.py  teams.py
app/core/: config.py  exceptions.py  permissions.py
app/core/db/: database.py  session.py
app/db/: db.py  models.py
app/middleware/: cors.py
app/models/: event.py  team.py
app/repositories/: __init__.py  event_repository.py  team_repository.py
app/schemas/: event.py  team.py
app/services/: __init__.py  event_service.py  team_service.py
app/tests/: parser_test.py  run_tests.py
app/utils/: parsers.py  utils.py
core/: config.py
