[project]
name = "cfr-searching"
version = "0.1.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "asyncpg==0.29.0",
    "aiofiles==23.2.1",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
]
testpaths = [
    "app/tests"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000